# libavahi-core

./: .cproject  .gitignore  .project  Makefile.am  README.md  config.h  configure.ac
avahi-common/: error.c
avahi-core/: netlink.h  socket.c
avahi-core.xcodeproj/: project.pbxproj
avahi-core.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
