AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

lib_LTLIBRARIES = libavahi-core.la

# avahi44

libavahi_core_la_CPPFLAGS = \
  -D RASPBERRY_PI=1 \
  -D_GNU_SOURCE=1

libavahi_core_la_SOURCES = \
  avahi-common/address.c \
  avahi-common/address.h \
  avahi-common/alternative.c \
  avahi-common/alternative.h \
  avahi-common/cdecl.h \
  avahi-common/defs.h \
  avahi-common/domain.c \
  avahi-common/domain.h \
  avahi-common/error.c \
  avahi-common/error.h \
  avahi-common/llist.h \
  avahi-common/malloc.c \
  avahi-common/malloc.h \
  avahi-common/rlist.c \
  avahi-common/rlist.h \
  avahi-common/simple-watch.c \
  avahi-common/simple-watch.h \
  avahi-common/strlst.c \
  avahi-common/strlst.h \
  avahi-common/timeval.c \
  avahi-common/timeval.h \
  avahi-common/utf8.c \
  avahi-common/utf8.h \
  avahi-common/watch.h \
  avahi-core/addr-util.c \
  avahi-core/addr-util.h \
  avahi-core/announce.c \
  avahi-core/announce.h \
  avahi-core/browse-dns-server.c \
  avahi-core/browse-domain.c \
  avahi-core/browse-service-type.c \
  avahi-core/browse-service.c \
  avahi-core/browse.c \
  avahi-core/browse.h \
  avahi-core/cache.c \
  avahi-core/cache.h \
  avahi-core/core.h \
  avahi-core/dns-srv-rr.h \
  avahi-core/dns.c \
  avahi-core/dns.h \
  avahi-core/domain-util.c \
  avahi-core/domain-util.h \
  avahi-core/entry.c \
  avahi-core/fdutil.c \
  avahi-core/fdutil.h \
  avahi-core/hashmap.c \
  avahi-core/hashmap.h \
  avahi-core/iface-linux.c \
  avahi-core/iface-linux.h \
  avahi-core/iface.c \
  avahi-core/iface.h \
  avahi-core/internal.h \
  avahi-core/log.c \
  avahi-core/log.h \
  avahi-core/lookup.h \
  avahi-core/multicast-lookup.c \
  avahi-core/multicast-lookup.h \
  avahi-core/netlink.c \
  avahi-core/netlink.h \
  avahi-core/prioq.c \
  avahi-core/prioq.h \
  avahi-core/probe-sched.c \
  avahi-core/probe-sched.h \
  avahi-core/publish.h \
  avahi-core/querier.c \
  avahi-core/querier.h \
  avahi-core/query-sched.c \
  avahi-core/query-sched.h \
  avahi-core/resolve-address.c \
  avahi-core/resolve-host-name.c \
  avahi-core/resolve-service.c \
  avahi-core/response-sched.c \
  avahi-core/response-sched.h \
  avahi-core/rr-util.h \
  avahi-core/rr.c \
  avahi-core/rr.h \
  avahi-core/rrlist.c \
  avahi-core/rrlist.h \
  avahi-core/server.c \
  avahi-core/socket.c \
  avahi-core/socket.h \
  avahi-core/timeeventq.c \
  avahi-core/timeeventq.h \
  avahi-core/util.c \
  avahi-core/util.h \
  avahi-core/wide-area.c \
  avahi-core/wide-area.h

#  avahi-core/iface-none.c
#  avahi-core/iface-pfroute.c
#  avahi-core/iface-pfroute.h
#  avahi-core/iface-linux.c
#  avahi-core/iface-linux.h
